fix layout issues

--- a/src/components/BottomNav/BottomNav.scss
+++ b/src/components/BottomNav/BottomNav.scss
@@ -1,11 +1,13 @@
 .bottom-nav {
-    width: 100vw;
-    display: flex;
-    position: fixed;
-    bottom: 0;
-    left: 0;
-    justify-content: space-around;
-    align-content: center;
-    border-top: 1px solid #CAC0C0;
-    padding: 12px 0;
+width: 100vw;
+display: flex;
+position: sticky;
+bottom: 0;
+left: 0;
+justify-content: space-around;
+align-content: center;
+border-top: 1px solid #CAC0C0;
+padding: 12px 0;
+z-index: 999;
+background-color: white;
 }
