--- a/src/components/TopBar/TopBar.scss
+++ b/src/components/TopBar/TopBar.scss
@@ -7,7 +7,7 @@
   justify-content: space-between;
 padding: 10px 15px;
 margin: 0 0 12px;
-
+z-index: 999;
 background-color: white;
   align-items: center;
 }
